--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,7 +7,6 @@ $speed: 600ms;
 
 #tsparticles {
   position: absolute;
-  z-index: -1;
 }
 
 .dark {
@@ -81,17 +80,22 @@ body {
   position: fixed;
   bottom: 0;
   width: 100vw;
-  height: 5rem;
+  height: 6rem;
   background-color: $bg-primary;
-  transition: width $speed ease;
+  transition: all $speed ease;
   overflow: visible;
   border-right: 1px solid $bg-secondary;
+
+  &.hidden {
+    bottom: -6rem !important;
+  }
 
   .nav {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     height: 100%;
+    padding-top: 1rem;
 
     .navItem {
       display: flex;
